stacks/geth/service-internal.yml
apiVersion: v1
kind: Service
metadata:
  name: goerli-geth
  namespace: validators
spec:
  selector:
    app: goerli-geth
  ports:
    - name: "ws-rpc"
      port: 8546
      targetPort: 8546
status:
  loadBalancer: {}
