stacks/geth/service.yml
apiVersion: v1
kind: Service
metadata:
  name: goerli-geth
spec:
  selector:
    app: goerli-geth
  ports:
    - name: "30303"
      port: 30303
      targetPort: 30303
    - name: "6060"
      port: 6060
      targetPort: 6060
    - name: "8546"
      port: 8546
      targetPort: 8546
status:
  loadBalancer: {}
